syntax = "proto3";

//package nakji.connectors.ethereum.evm;
package evm;

import "google/protobuf/timestamp.proto";
//import "nakji/type/bigint" 

option go_package = "github.com/nakji-network/connectors/ethereum/evm;evm";

// TODO: update when hughie's update occurs (change all Timestamp to ts)
// Import nakji/type/bigint and change all to int

// to convert addresses from bytes to hex address, https://github.com/ethereum/go-ethereum/blob/4b2ff1457ac28fb2894485194e0e344e84c2bcd7/common/types.go#L210
message Transaction {
  google.protobuf.Timestamp ts            = 1; //uint64
  bytes                     from          = 2;
  string                    hash          = 3;
  double                    size          = 4;
  uint64                    account_nonce = 5; // uint64
  uint64                    price         = 6; // big.int
  uint64                    gas_limit     = 7; // uint64
  bytes                     recipient     = 8;
  uint64                    amount        = 9; // big.int
  bytes                     payload       = 10;
  uint64                    v             = 11; // big.int
  uint64                    r             = 12; // big.int
  uint64                    s             = 13; // big.int
}

message Block {
  google.protobuf.Timestamp ts         = 1; //uint64
  uint64                    num        = 2; //bigint
  bytes                     hash       = 3;
  uint64                    difficulty = 4; //bigint
  uint64                    gas_limit  = 5; // uint64
  uint64                    gas_used   = 6; // uint64
  uint64                    nonce      = 7; //[8]byte .Uint64()
}
